profilelist1exp/unpackaged/objects/Alliance_Rebate_Request__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Sales_Person_Email_2__c</fullName>
        <label>Additional Sales Person Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Sales_Person_Email__c</fullName>
        <label>Additional Sales Person Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Affinity_Account_Parent_ID__c</fullName>
        <formula>Sales_Force_Deal_ID__r.Affinity_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affinity Account Parent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alliance_Excel_Template__c</fullName>
        <formula>IF( AND( ISPICKVAL(System_Partner_Name__c, &apos;Intel&apos;), ISPICKVAL(Client_Enterprise__c, &apos;Enterprise&apos;), ISPICKVAL(Part_Requested__c, &apos;CPU&apos;), ISPICKVAL(Status__c, &apos;Draft&apos;) ), 
HYPERLINK(LEFT($Api.Partner_Server_URL_140,FIND(&apos;.com&apos;,$Api.Partner_Server_URL_140)+4)+$Label.Alliance_Template_ID, &quot;Download Template&quot;), 
IF(AND( ISPICKVAL(System_Partner_Name__c, &apos;Intel&apos;), ISPICKVAL(Client_Enterprise__c, &apos;Enterprise&apos;), ISPICKVAL(Part_Requested__c, &apos;OPA&apos;), ISPICKVAL(Status__c, &apos;Draft&apos;) ),
HYPERLINK(LEFT($Api.Partner_Server_URL_140,FIND(&apos;.com&apos;,$Api.Partner_Server_URL_140)+4)+$Label.Alliance_OPA_Template_ID, &quot;Download Template&quot;), &apos;&apos; ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intel Meetcomp Request Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_ID__c</fullName>
        <label>Approval ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Price__c</fullName>
        <label>Approved Price (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Rebate_Amount__c</fullName>
        <label>Approved Rebate Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approver_Rejection_Comments__c</fullName>
        <label>Approver Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Book_Date__c</fullName>
        <formula>Sales_Force_Deal_ID__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Case_Information__c</fullName>
        <inlineHelpText>Deal significance (i.e. deal size, rationale for rebate, company background, explanation of project, future business opportunities, etc.)</inlineHelpText>
        <label>Business Case Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Sales_Force_Deal_ID__r.Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Enterprise__c</fullName>
        <inlineHelpText>Client as Desktop / Notebook, and Enterprise as Server, Networking, Storage</inlineHelpText>
        <label>Client / Enterprise</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                    <default>true</default>
                    <label>Client</label>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Additional_discount__c</fullName>
        <label>Competitor – Additional discount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_Single_System_List_Price__c</fullName>
        <label>Competitor Single System List Price (USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_Total_deal_price__c</fullName>
        <formula>(Competitor_Single_System_List_Price__c  *  Competitor_of_systems__c)  -  Competitor_Additional_discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Total deal price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_of_systems__c</fullName>
        <label>Competitor - # of systems</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consolidated_Price_Request__c</fullName>
        <label>Consolidated Price Request (USD)</label>
        <summarizedField>Rebate_Request_Product__c.Price_Requested__c</summarizedField>
        <summaryForeignKey>Rebate_Request_Product__c.Alliance_Rebate_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Sales_Force_Deal_ID__r.Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alliance_Rebate_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Sales_Force_Deal_ID__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dell_Additional_discount__c</fullName>
        <label>Dell – Additional discount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dell_Customer_Number__c</fullName>
        <formula>Sales_Force_Deal_ID__r.Account.Primary_Customer_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dell Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dell_Single_System_List_Price__c</fullName>
        <inlineHelpText>For Server CPU Only</inlineHelpText>
        <label>Dell Single System List Price (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dell_Standard_CPU_Currency__c</fullName>
        <label>Dell Standard CPU Price (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dell_Standard_CPU_Price__c</fullName>
        <formula>Dell_Standard_CPU__r.Net_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dell Standard CPU Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dell_Standard_CPU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dell Standard CPU</label>
        <referenceTo>Alliance_STF_Price__c</referenceTo>
        <relationshipLabel>Alliance Rebate Requests</relationshipLabel>
        <relationshipName>Alliance_Rebate_Requests_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dell_Standard_CPU_text__c</fullName>
        <label>Dell Standard CPU</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dell_Total_deal_price_without_discounts__c</fullName>
        <formula>Dell_of_systems__c   *  Dell_Single_System_List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dell Total deal price without discounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dell_of_systems__c</fullName>
        <label>Dell # of systems</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_percentage__c</fullName>
        <label>Discount percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Draft_notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Draft notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Empty__c</fullName>
        <label>Empty</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Contact__c</fullName>
        <inlineHelpText>Enter Unknown@dell.com if you don’t know your finance contact</inlineHelpText>
        <label>Finance Contact Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Approver Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Region__c</fullName>
        <formula>TEXT( Sales_Force_Deal_ID__r.Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Requested__c</fullName>
        <label>Part Requested</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPU</fullName>
                </value>
                <value>
                    <fullName>OPA</fullName>
                </value>
                <value>
                    <fullName>Other ( SSD / NIC)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_BDM_Name__c</fullName>
        <inlineHelpText>Partner contact who will help validate the request.  Please type unknown if you need help determining who BDM is</inlineHelpText>
        <label>Partner BDM Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <formula>Sales_Force_Deal_ID__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RRP_ChildData_IT__c</fullName>
        <label>RRP_ChildData_IT</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RRP_PartName__c</fullName>
        <label>RRP_PartName</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rebate_Request_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rebate Request Product</label>
        <referenceTo>Rebate_Request_Product__c</referenceTo>
        <relationshipLabel>Alliance Rebate Requests</relationshipLabel>
        <relationshipName>Alliance_Rebate_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipient_Email__c</fullName>
        <formula>if(AND(ISPICKVAL(System_Partner_Name__c,&apos;Nvidia&apos;),ISPICKVAL(Region__c,&apos;GLOBAL&apos;)),$Label.NvidiaGlobal,
if(AND(ISPICKVAL(System_Partner_Name__c,&apos;AMD&apos;),ISPICKVAL(Region__c,&apos;GLOBAL&apos;)),$Label.AmdGlobal,
if(AND(ISPICKVAL(System_Partner_Name__c,&apos;Mellanox&apos;),ISPICKVAL(Region__c,&apos;GLOBAL&apos;)),$Label.MellanoxGlobal,
if(AND(ISPICKVAL(System_Partner_Name__c,&apos;Brocade&apos;),ISPICKVAL(Region__c,&apos;APJ&apos;)),$Label.BrocadeApj,
if(AND(ISPICKVAL(System_Partner_Name__c,&apos;Brocade&apos;),ISPICKVAL(Region__c,&apos;NA&apos;)),$Label.BrocadeNA,

if(AND(ISPICKVAL(System_Partner_Name__c,&apos;Brocade&apos;),ISPICKVAL(Region__c,&apos;EMEA&apos;)),$Label.BrocadeEmea,
if(AND(ISPICKVAL(System_Partner_Name__c,&apos;Brocade&apos;),ISPICKVAL(Region__c,&apos;LATAM&apos;)),$Label.BrocadeLatam,

if(AND(ISPICKVAL(System_Partner_Name__c,&apos;Broadcom/Emulex&apos;),ISPICKVAL(Region__c,&apos;GLOBAL&apos;)),$Label.BroadcomEmulexGlobal,
if(AND(ISPICKVAL(System_Partner_Name__c,&apos;Qlogic/Cavium	&apos;),ISPICKVAL(Region__c,&apos;APJ&apos;)),$Label.QlogicCaviumApj,
if(AND(ISPICKVAL(System_Partner_Name__c,&apos;Qlogic/Cavium	&apos;),ISPICKVAL(Region__c,&apos;LATAM&apos;)),$Label.QlogicCaviumLatam,
if(AND(ISPICKVAL(System_Partner_Name__c,&apos;Qlogic/Cavium	&apos;),ISPICKVAL(Region__c,&apos;NA&apos;)),$Label.QlogicCaviumNa,
if(AND(ISPICKVAL(System_Partner_Name__c,&apos;Qlogic/Cavium	&apos;),ISPICKVAL(Region__c,&apos;EMEA&apos;)),$Label.QlogicCaviumEmea,&apos;&apos;))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GLOBAL</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rejection_Comments__c</fullName>
        <label>Rejection Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rejection_Reasons__c</fullName>
        <label>Rejection Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Does not meet minimum volume requirements</fullName>
                </value>
                <value>
                    <fullName>Competition can&apos;t be validated</fullName>
                </value>
                <value>
                    <fullName>This part is not receiving rebates at this time</fullName>
                </value>
                <value>
                    <fullName>Competitive part is not equal in performance</fullName>
                </value>
                <value>
                    <fullName>Partner can&apos;t approve further discounts at this time</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rollout_From__c</fullName>
        <label>Shipment start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rollout_To__c</fullName>
        <label>Shipment end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Deal_ID__c</fullName>
        <formula>Sales_Force_Deal_ID__r.Deal_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Deal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Force_Deal_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Please remember to select the &quot;All Fields&quot; option in the lookup screen to optimize the search to find the right deal</inlineHelpText>
        <label>Sales Force Deal ID</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Alliance Rebate Requests</relationshipLabel>
        <relationshipName>Alliance_Rebate_Request</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <formula>Sales_Force_Deal_ID__r.Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>text( Sales_Force_Deal_ID__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Sales_Force_Deal_ID__r.Account.BillingState</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Work in Progress</fullName>
                </value>
                <value>
                    <fullName>Awaiting Vendors Response</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Partner_Name__c</fullName>
        <label>Partner Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Client_Enterprise__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Intel</fullName>
                </value>
                <value>
                    <fullName>Nvidia</fullName>
                </value>
                <value>
                    <fullName>Brocade</fullName>
                </value>
                <value>
                    <fullName>Mellanox</fullName>
                </value>
                <value>
                    <fullName>Broadcom/Emulex</fullName>
                </value>
                <value>
                    <fullName>AMD</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Qlogic/Cavium</fullName>
                </value>
                <value>
                    <fullName>Qualcomm</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Toshiba</fullName>
                </value>
                <value>
                    <fullName>Ruckus</fullName>
                </value>
                <value>
                    <fullName>Xilinx</fullName>
                </value>
                <value>
                    <fullName>BigSwitch</fullName>
                </value>
                <value>
                    <fullName>Intel Bid-Bucket</fullName>
                </value>
                <value>
                    <fullName>Aerohive</fullName>
                </value>
                <value>
                    <fullName>Sonicwall</fullName>
                    <isActive>false</isActive>
                    <label>Sonicwall</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Member1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>These team members will be copied on the submission, approval, Rejection and Expiration Emails (i.e. AE, ISR, TSR, etc.)</inlineHelpText>
        <label>Team Member1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alliance_Rebate_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Member2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>These team members will be copied on the submission, approval, Rejection and Expiration Emails (i.e. AE, ISR, TSR, etc.)</inlineHelpText>
        <label>Team Member2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alliance_Rebate_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Member3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>These team members will be copied on the submission, approval, Rejection and Expiration Emails (i.e. AE, ISR, TSR, etc.)</inlineHelpText>
        <label>Team Member3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alliance_Rebate_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Deal_Size__c</fullName>
        <label>Total Deal Size (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Intel_discount_requested__c</fullName>
        <label>Total Intel discount requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Margin__c</fullName>
        <formula>Sales_Force_Deal_ID__r.Total_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Rebate_Amount__c</fullName>
        <label>Total Rebate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unweighted_Revenue__c</fullName>
        <formula>Sales_Force_Deal_ID__r.Unweighted_Rev_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unweighted Revenue</label>
        <type>Text</type>
    </fields>
    <label>Alliance Rebate Request</label>
    <listViews>
        <fullName>Alliance_APJ_Intel_Bid_Bucket_BBA_Alliance_Rebate_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Alliance APJ Intel Bid Bucket BBA</label>
        <queue>Alliance_APJ_Intel_Bid_Bucket_BBA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alliance_APJ_Intel_Bid_Bucket_FMM_Alliance_Rebate_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Alliance APJ Intel Bid Bucket FMM</label>
        <queue>Alliance_APJ_Intel_Bid_Bucket_FMM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alliance_EMEA_Intel_Bid_Bucket_BBA_Alliance_Rebate_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Alliance EMEA Intel Bid Bucket BBA</label>
        <queue>Alliance_EMEA_Intel_Bid_Bucket_BBA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alliance_EMEA_Intel_Bid_Bucket_FMM_Alliance_Rebate_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Alliance EMEA Intel Bid Bucket FMM</label>
        <queue>Alliance_EMEA_Intel_Bid_Bucket_FMM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alliance_LATAM_Intel_Bid_Bucket_BBA_Alliance_Rebate_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Alliance LATAM Intel Bid Bucket BBA</label>
        <queue>Alliance_LATAM_Intel_Bid_Bucket_BBA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alliance_LATAM_Intel_Bid_Bucket_FMM_Alliance_Rebate_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Alliance LATAM Intel Bid Bucket FMM</label>
        <queue>Alliance_LATAM_Intel_Bid_Bucket_FMM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alliance_NA_Intel_Bid_Bucket_BBA_Alliance_Rebate_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Alliance NA Intel Bid Bucket BBA</label>
        <queue>Alliance_NA_Intel_Bid_Bucket_BBA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alliance_NA_Intel_Bid_Bucket_FMM_Alliance_Rebate_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Alliance NA Intel Bid Bucket FMM</label>
        <queue>Alliance_NA_Intel_Bid_Bucket_FMM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rebate_Request_AMD_Partner</fullName>
        <columns>NAME</columns>
        <columns>System_Partner_Name__c</columns>
        <columns>Client_Enterprise__c</columns>
        <columns>Sales_Force_Deal_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Affinity_Account_Parent_ID__c</columns>
        <columns>Book_Date__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Finance_Contact__c</columns>
        <columns>Probability__c</columns>
        <columns>Stage__c</columns>
        <columns>Total_Margin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>System_Partner_Name__c</field>
            <operation>equals</operation>
            <value>AMD</value>
        </filters>
        <label>Rebate Request -  AMD Partner</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rebate_Request_Approved</fullName>
        <columns>NAME</columns>
        <columns>System_Partner_Name__c</columns>
        <columns>Client_Enterprise__c</columns>
        <columns>Sales_Force_Deal_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Affinity_Account_Parent_ID__c</columns>
        <columns>Book_Date__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Finance_Contact__c</columns>
        <columns>Probability__c</columns>
        <columns>Stage__c</columns>
        <columns>Total_Margin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Rebate Request - Approved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rebate_Request_Awaiting_Vendors_Resp</fullName>
        <columns>NAME</columns>
        <columns>System_Partner_Name__c</columns>
        <columns>Client_Enterprise__c</columns>
        <columns>Sales_Force_Deal_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Affinity_Account_Parent_ID__c</columns>
        <columns>Book_Date__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Finance_Contact__c</columns>
        <columns>Probability__c</columns>
        <columns>Stage__c</columns>
        <columns>Total_Margin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Awaiting Vendors Response</value>
        </filters>
        <label>Rebate Request -  Awaiting Vendors Resp</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rebate_Request_Broadcom_Emulex_Partner</fullName>
        <columns>NAME</columns>
        <columns>System_Partner_Name__c</columns>
        <columns>Client_Enterprise__c</columns>
        <columns>Sales_Force_Deal_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Affinity_Account_Parent_ID__c</columns>
        <columns>Book_Date__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Finance_Contact__c</columns>
        <columns>Probability__c</columns>
        <columns>Stage__c</columns>
        <columns>Total_Margin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>System_Partner_Name__c</field>
            <operation>equals</operation>
            <value>Broadcom/Emulex</value>
        </filters>
        <label>Rebate Request - Broadcom/Emulex Partner</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rebate_Request_Brocade_Partner</fullName>
        <columns>NAME</columns>
        <columns>System_Partner_Name__c</columns>
        <columns>Client_Enterprise__c</columns>
        <columns>Sales_Force_Deal_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Affinity_Account_Parent_ID__c</columns>
        <columns>Book_Date__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Finance_Contact__c</columns>
        <columns>Probability__c</columns>
        <columns>Stage__c</columns>
        <columns>Total_Margin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>System_Partner_Name__c</field>
            <operation>equals</operation>
            <value>Brocade</value>
        </filters>
        <label>Rebate Request -  Brocade Partner</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rebate_Request_Cancelled</fullName>
        <columns>NAME</columns>
        <columns>Client_Enterprise__c</columns>
        <columns>System_Partner_Name__c</columns>
        <columns>Sales_Force_Deal_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Affinity_Account_Parent_ID__c</columns>
        <columns>Book_Date__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Finance_Contact__c</columns>
        <columns>Probability__c</columns>
        <columns>Stage__c</columns>
        <columns>Total_Margin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Rebate Request - Cancelled</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rebate_Request_Client</fullName>
        <columns>NAME</columns>
        <columns>System_Partner_Name__c</columns>
        <columns>Client_Enterprise__c</columns>
        <columns>Sales_Force_Deal_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Affinity_Account_Parent_ID__c</columns>
        <columns>Book_Date__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Finance_Contact__c</columns>
        <columns>Probability__c</columns>
        <columns>Stage__c</columns>
        <columns>Total_Margin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Client_Enterprise__c</field>
            <operation>equals</operation>
            <value>Client</value>
        </filters>
        <label>Rebate Request -  Client</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ARR-{000000}</displayFormat>
        <label>Deal / Form ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alliance Rebate Requests</pluralLabel>
    <recordTypes>
        <fullName>Old_Approvals_RT</fullName>
        <active>true</active>
        <label>Old Approvals RT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rebate_Request_Approved</fullName>
        <active>true</active>
        <label>Rebate Request Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rebate_Request_Intel_CPU_Submission</fullName>
        <active>true</active>
        <label>Rebate Request Intel CPU Submission</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rebate_Request_Rejected</fullName>
        <active>true</active>
        <label>Rebate Request Rejected</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rebate_Request_Submission</fullName>
        <active>true</active>
        <description>Sales User / Program Leads Record type when Submitted</description>
        <label>Rebate Request Submission</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Rollout_Date_From_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(Rollout_From__c  &lt; Today(), ISCHANGED(Rollout_From__c) ),

AND(ISNEW(), Rollout_From__c  &lt; Today(), NOT(ISBLANK(Rollout_From__c)) ) )</errorConditionFormula>
        <errorMessage>Shipment start date  should be Greater than or Equal to Today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rollout_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Rollout_From__c  &gt;  Rollout_To__c</errorConditionFormula>
        <errorMessage>Shipment end date  should be greater than or equal to Shipment start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Rollout_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( Rollout_From__c ), NOT( ISBLANK( Rollout_To__c )))</errorConditionFormula>
        <errorMessage>You must enter a Shipment start date</errorMessage>
    </validationRules>
</CustomObject>